
==10/15/2008
Derision: Added OP_LevelAppearance to utils/patch_Titanium.conf and it is now sent to nearby clients (eye candy when you level)
Derision: (seveianrex) Alcohol Drinking / Skillup Fix
KLS: Change to proc code to correct some oddities with % chance to proc.
KLS: Changed how avoidance bonuses are calculated to be like other melee bonuses.

==10/14/2008
Trevius: Charm Spells set to max level of 0 now have unlimited max level as they should
Derision: Player pets should no longer be fearable if npcspecialattks contains 'D'.
cavedude00: (Rocker8956) Changes to quest::getlevel and quest::setinstflag/setinstflagmanually to reduce DB access
cavedude00: (Rocker8956) Added quest::getinstflag
KLS: Fixed crash in shutdown delay, please test things for crashes before adding them, this was pretty obvious.
Derision: Removed requirement to be grouped for Translocate spells.

==10/13/2008
Derision: Looting your corpse while liched/wolf form etc should now auto-equip items

==10/12/2008
Derision: No more binding wounds while feigning death.
Derision: (Rocker8956) Movegrp quest command fix.
Derision: (LeftRoad) TEMPORARY(NORENT) items in a character inventory will be retained if you log back into that character within 30 minutes.
KLS: Implemented Raid::TeleportGroup() and Raid::TeleportRaid(), untested but should work.
KLS: (seveianrex) Critical DoT and Sinister Strikes AA.

==10/11/2008
Derision: Resurrection fix.
KLS: Rebalanced skill ups.

==10/10/2008
AndMetal: Added functions to calculate AA bonuses just like item & spell bonuses (not turned on yet)
Condgar: Fix for Bots wont Attack
Congdar: Fix low level bots hitting too hard
Derision: Prevent two instances of possible zone crashes due to null pointers.
Trevius: (Striat) Added quest commands for zone and world emotes - quest::ze() & quest::we()
Derision: Recalculate Pet bonuses on zoning before setting current HP/Mana.

==10/09/2008
Congdar: Replace Client IsEngaged() checks in Bot Source with bot aggro check