@@ -189,6 +189,17 @@ void Mob::MakePet(int16 spell_id, const char* pettype, const char *petname) {
 	NPCType *npc_type = new NPCType;
 	memcpy(npc_type, base, sizeof(NPCType));
 	
+	if (this->IsClient() && CastToClient()->GetFocusEffect(focusPetPower, spell_id) > 0)
+	{
+		npc_type->max_hp *= 1.20;
+		npc_type->cur_hp = npc_type->max_hp;
+		npc_type->AC *= 1.20;
+		npc_type->level += 1;
+		npc_type->min_dmg = (npc_type->min_dmg * 110 / 100);
+		npc_type->max_dmg = (npc_type->max_dmg * 110 / 100);
+		npc_type->size *= 1.15;
+	}
+
 	//TODO: think about regen (engaged vs. not engaged)
 	
 	if(petname != NULL) {
